# micron-agent

./: .gitignore  ACTION_PLAN.md  DEVELOPMENT_PLAN.md  FIXES_SUMMARY.md  IMPROVEMENT_SUMMARY.md  P0_FIX_REPORT.md  PLAN.md  QUICK_START.md  README.md  REVIEW.md  SLICE_PLAN.md  micron.yaml  pyproject.toml  server.py
context/knowledge/: python313.md  python_tips.md
context/persona/: assistant.md
context/plugins/: example.py
context/skills/: calculate.md  create_skill.md  current_time.md  fetch_url.md  grill-with-docs.md  list_files.md  python_eval.md  read_file.md  run_command.md  save_memory.md  search_knowledge.md  search_memory.md  search_skill_library.md  web_search.md  write_file.md  write_knowledge.md
docs/: self-assembling-skills.md
micron/: __init__.py  __main__.py  agent.py  config.py  llm.py  memory.py  prompt.py  search.py  server.py  server_new.py  sessions.py  skills.py
micron/plugins/: __init__.py  loader.py
micron/static/: app.js  index.html  style.css
micron/tools/: builtin.py  error_handling.py  registry.py
tests/: test_agent.py  test_confirmation.py  test_memory.py  test_registry.py  test_resource_limits.py  test_search.py  test_server.py  test_skills.py  test_tools.py
