[project]
name = "micron"
version = "0.1.0"
description = "Lightweight AI agent with file-based memory, skills, and tool calling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "llama-cpp-python>=0.2.70",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0",
    "asteval>=0.9",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5", "mypy>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "sse-starlette>=2.0", "python-multipart>=0.0.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["micron*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
